--- a/textsfrommyfriends.html
+++ b/textsfrommyfriends.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>D3: Time scale</title>
+		<title>Texts from my friends</title>
 		<script type="text/javascript" src="../d3.js"></script>
 		<style type="text/css">
 			/* Basic layout rules */
